# hostcompute_nspawn

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: hostcompute_nspawn.h
resources/: config.json  hostcompute_nspawn.manifest  hostcompute_nspawn.rc
src/: CallbackLatch.hpp  ContainerConfig.hpp  ContainerId.hpp  ContainerLayer.hpp  NSpawnConfig.hpp  NSpawnException.hpp  NotificationType.hpp  ProcessConfig.hpp  callback_latch.hpp  container_config.hpp  container_id.hpp  container_layer.hpp  hostcompute_nspawn.cpp  main.cpp  notification_type.hpp  nspawn_config.hpp  nspawn_exception.hpp  process_config.hpp  utils.cpp  utils.hpp  vmcompute.cpp  vmcompute.hpp
test/: cores.cpp  hello.cpp  mem.cpp  test.bat
